Fixed styling overlap

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -169,6 +169,8 @@ body {
   text-align: center;
   font-size: 40px;
   font-weight: 600;
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 
 .card-comparison {
